Fix admin control description spacing.

--- a/source/stylesheets/gitlab-ee-standalone.css.scss
+++ b/source/stylesheets/gitlab-ee-standalone.css.scss
@@ -174,9 +174,3 @@ body {
     }
   }
 }
-
-.admin-control {
-  .features-description {
-    margin-top: 0;
-  }
-}
